# pythonProject_curs3

./: README.md  env.sample  pyproject.toml  requirements.txt
config/: settings.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: add_moderator.py
users/migrations/: 0001_initial.py
users/templates/: login.html
