[tool.poetry]
name = "pythonproject-curs3"
version = "0.1.0"
description = ""
authors = ["Elizaveta <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
ipython = "^9.3.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
